<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etx_username_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_edx"
            android:background="@drawable/rounded_edittext"
            android:ellipsize="end"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_edx"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imv_logo" />


        <EditText
            android:id="@+id/etx_password_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_edx"
            android:background="@drawable/rounded_edittext"
            android:ellipsize="start"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edx"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_username_login" />

        <ImageView
            android:id="@+id/imv_logo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/logo_topMargin"
            android:background="@color/background_color"
            android:src="@drawable/messenger"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/liner_remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:padding="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_password_login">

            <TextView
                android:id="@+id/txv_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remeber_me" />

            <View
                android:layout_width="10dp"
                android:layout_height="match_parent"/>

            <CheckBox
                android:id="@+id/radioB_remember_me_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <TextView
            android:id="@+id/txv_forget_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/forget_your_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_password_login" />

        <Button
            android:id="@+id/btn_login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:text="@string/login"
            android:background="@drawable/shape_btn"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_password_login" />

        <LinearLayout
            android:id="@+id/liner_create_account2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login_login">

            <TextView
                android:id="@+id/txv_create_account_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/create_new_account"/>

            <View
                android:layout_width="3dp"
                android:layout_height="3dp"/>

            <TextView
                android:id="@+id/txv_i_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/liner_create_account2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>