<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:saveEnabled="false"
    tools:context=".signup.SignupActivity">

    <Button
        android:id="@+id/btn_next_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_btn"
        android:fontFamily="sans-serif-black"
        android:text="التالي"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/liner_create_account2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/liner_create_account2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txt_go_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_underline"
            android:textColor="@color/colorPrimary" />

        <View
            android:layout_width="3dp"
            android:layout_height="3dp" />

        <TextView
            android:id="@+id/txv_i_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_have_account" />


    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container_signUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_next_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">


    </FrameLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="32dp">

            <Button
                android:id="@+id/btn_p1_signup"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:background="@drawable/circle_btn1"
                android:text="@string/_1"
                android:textColor="@color/colorTextIcon" />

            <View
                android:id="@+id/view_signUp"
                android:layout_width="46dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/disabled_btn_color" />

            <Button
                android:id="@+id/btn_p2_signup"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="start"
                android:background="@drawable/circle_btn2"
                android:text="@string/_2"
                android:textColor="@color/colorTextIcon" />

            <Space
                android:layout_width="64dp"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>