<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_forgetPass"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".forgetpassword.ForgetPasswordActivity">

    <FrameLayout
        android:id="@+id/fragment_container_forgetpass"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/LinerL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_by_email_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:background="@drawable/rounded_edittext"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/card_icon_width"
                android:layout_height="@dimen/card_icon_height"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="@dimen/card_icon_margin"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="@dimen/card_lable_margin"
                android:text="@string/email" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_return_by_phone_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/card_icon_width"
                android:layout_height="@dimen/card_icon_height"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="@dimen/card_icon_margin"
                app:srcCompat="@android:drawable/btn_dialog" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="@dimen/card_lable_margin"
                android:text="@string/phone_number" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/crv_return_by_admin_forgetpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/card_icon_width"
                android:layout_height="@dimen/card_icon_height"
                android:layout_gravity="top|center_horizontal"
                android:layout_margin="@dimen/card_icon_margin"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="@dimen/card_lable_margin"
                android:text="@string/contact_admin" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/return_pass_by"
        android:textColor="@color/colorSecondaryText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:srcCompat="@drawable/messenger" />

</androidx.constraintlayout.widget.ConstraintLayout>

